# ifcfg-devname

./: .codecov.yml  .gitignore  .mergify.yml  .packit.yml  Cargo.toml  Makefile  README.md  codecov.yml  fake_kernel_cmd  ifcfg-devname.spec  rust-ifcfg-devname.spec
.github/: advanced-issue-labeler.yml  dependabot.yml  release-drafter.yml
.github/workflows/: ifcfg-devname-test-coverage.yml  issue-labeler.yml  linter.yml  publish.yml  release-drafter.yml  rust.yml  scorecard-analysis.yml  test-coverage.yml  test.yml
rules/: 60-net.rules
src/: lib.rs  logger.rs  main.rs  parse.rs  parser.rs  rename_device.c  scan.rs  scanner.rs  test.rs  unit_test.rs
tests/: integration_test.rs
tests/data/: ABOUT.md
tests/data/1/: cmdline
tests/data/1/ifcfgs/: ifcfg-eth0
tests/data/2/: cmdline
tests/data/2/ifcfgs/: ifcfg-eth0
tests/data/4/: about.json
tests/ifcfgs/: ifcfg-eth0
tests/integration_test_data/: ABOUT.md
tests/integration_test_data/1/: about.json
tests/integration_test_data/2/: about.json
tests/integration_test_data/2/ifcfgs/: ifcfg-eth0
tests/integration_test_data/3/: about.json
tests/integration_test_data/3/ifcfgs/: ifcfg-eth0
tests/integration_test_data/4/: about.json
tests/integration_test_data/4/ifcfgs/: ifcfg-eth1
tests/integration_test_data/5/: about.json
tests/integration_test_data/5/ifcfgs/: ifcfg-eth0  ifcfg-eth1
tests/integration_test_data/6/: about.json  cmdline
tests/integration_test_data/6/ifcfgs/: ifcfg-eth0  ifcfg-eth0 copy
tests/integration_test_data/7/: about.json
tests/integration_test_data/7/ifcfgs/: ifcfg-eth1
tests/unit_test_data/cmdlines/: 1_should_pass
tests/unit_test_data/ifcfgs/: ifcfg-eth0  ifcfg-eth1  not-ifcfg-eth2
usr/lib/udev/rules.d/: 60-net.rules
