[package]
name = "ifcfg-devname"

version = "1.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Jan Macku <jamacku@redhat.com>"]
repository = "https://github.com/fedora-sysv/ifcfg-devname"
exclude = ["./.codecov.yml", "./mergify.yml", "/target/*", "/.github/*"]

keywords = ["ifcfg", "udev"]
categories = []
description = "Udev helper utility that provides network interface naming"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.3"

# globbing
glob = "0.3.0"

# parsing
regex = "1.6.0"
lazy_static = "1.4.0"

# logging
syslog = "^6.0.1"
log = "0.4.17"
stderrlog = "0.5.3"


# integration testing
[dev-dependencies]

# command exevution
assert_cmd = "2.0.4"
predicates = "2.1.1"

# JSON
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.85"
