[package]
name = "ifcfg-devname"

version = "1.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Jan Macku <jamacku@redhat.com>"]
repository = "https://github.com/fedora-sysv/ifcfg-devname"
exclude = ["./.codecov.yml", "./mergify.yml", "/target/*", "/.github/*"]

keywords = ["ifcfg", "udev"]
categories = []
description = "Udev helper utility that provides network interface naming"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.5"

# globbing
glob = "0.3.1"

# parsing
regex = "1.9.1"
lazy_static = "1.4.0"

# logging
syslog = "^6.1.0"
log = "0.4.20"
stderrlog = "0.5.4"


# integration testing
[dev-dependencies]

# command exevution
assert_cmd = "2.0.15"
predicates = "3.0.4"

# JSON
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.107"
