[package]
name = "ifcfg-devname"

version = "1.1.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Jan Macku <jamacku@redhat.com>"]
repository = "https://github.com/fedora-sysv/ifcfg-devname"
exclude = ["./.codecov.yml", "./mergify.yml", "/target/*", "/.github/*"]

keywords = ["ifcfg", "udev"]
categories = []
description = "Udev helper utility that provides network interface naming"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.7"

# globbing
glob = "0.3.1"

# parsing
regex = "1.10.6"
lazy_static = "1.5.0"

# logging
syslog = "^6.1.0"
log = "0.4.22"
stderrlog = "0.6.0"


# integration testing
[dev-dependencies]

# command exevution
assert_cmd = "2.0.16"
predicates = "3.1.2"

# JSON
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.107"
